# oracle-ark

./: .gitignore  Cargo.toml  README.md  build.sh  example_custom.json  example_multi.json  example_near_multi_source.json  example_request.json  example_single_validator.json  example_text.json
src/: aggregation.rs  main.rs  parallel.rs  sources.rs  types.rs
